reorders df columns

--- a/ef_data_process.ipynb
+++ b/ef_data_process.ipynb
@@ -1298,6 +1298,15 @@
     "\n",
     "df = pd.merge(left = df, right = coords, on = \"Station\", how = \"left\")\n",
     "\n",
+    "df = df[[\n",
+    "    'Station', 'Network', 'Station_type', 'Longitude', 'Latitude', 'City', 'Arr', 'Lines',\n",
+    "    'Trafic_2013', 'Trafic_2014', 'Trafic_2015', 'Trafic_2016', 'Trafic_2017', 'Trafic_2018', 'Trafic_2019',\n",
+    "    'Trafic_2020', 'Trafic_2021', 'Mean_trafic', 'SD_trafic', 'Trafic_2013_norm','Trafic_2014_norm',\n",
+    "    'Trafic_2015_norm', 'Trafic_2016_norm', 'Trafic_2017_norm', 'Trafic_2018_norm', 'Trafic_2019_norm',\n",
+    "    'Trafic_2020_norm', 'Trafic_2021_norm','Rank_2013', 'Rank_2014', 'Rank_2015',  'Rank_2016', 'Rank_2017',\n",
+    "    'Rank_2018', 'Rank_2019', 'Rank_2020', 'Rank_2021', 'Rank_mean'\n",
+    "]]\n",
+    "\n",
     "display(HTML(f\"\"\"\n",
     "<div class = 'all'>\n",
     "    <h2></h2>\n",
