--- a/ef_versailles.ipynb
+++ b/ef_versailles.ipynb
@@ -37,6 +37,292 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "afff1bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('ef_versailles.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f358c81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station_name</th>\n",
+       "      <th>Network</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Traffic_2015</th>\n",
+       "      <th>Traffic_2016</th>\n",
+       "      <th>Traffic_2017</th>\n",
+       "      <th>Traffic_2018</th>\n",
+       "      <th>Traffic_2019</th>\n",
+       "      <th>Traffic_2020</th>\n",
+       "      <th>Traffic_2021</th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Traffic_2022</th>\n",
+       "      <th>dept</th>\n",
+       "      <th>Traffic_pre_cov</th>\n",
+       "      <th>Traffic_pre_cov_sd</th>\n",
+       "      <th>covid_drop_2020</th>\n",
+       "      <th>covid_drop_2021</th>\n",
+       "      <th>Traffic_2020_2021</th>\n",
+       "      <th>Origin_id</th>\n",
+       "      <th>Rank_rer_2015</th>\n",
+       "      <th>Rank_rer_2016</th>\n",
+       "      <th>Rank_rer_2017</th>\n",
+       "      <th>Rank_rer_2018</th>\n",
+       "      <th>Rank_rer_2019</th>\n",
+       "      <th>Rank_rer_2020</th>\n",
+       "      <th>Rank_rer_2021</th>\n",
+       "      <th>Rank_rer_2022</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Versailles Chantiers</td>\n",
+       "      <td>RER</td>\n",
+       "      <td>2.135160</td>\n",
+       "      <td>48.795690</td>\n",
+       "      <td>versailles</td>\n",
+       "      <td>24191310.0</td>\n",
+       "      <td>24132107.0</td>\n",
+       "      <td>23974181.0</td>\n",
+       "      <td>23336771.0</td>\n",
+       "      <td>22909416.0</td>\n",
+       "      <td>12376593</td>\n",
+       "      <td>15922909</td>\n",
+       "      <td>78000.0</td>\n",
+       "      <td>18934500.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>23708757.0</td>\n",
+       "      <td>501966.560353</td>\n",
+       "      <td>-0.477974</td>\n",
+       "      <td>-0.328395</td>\n",
+       "      <td>0.286534</td>\n",
+       "      <td>531</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Versailles Château Rive Gauche</td>\n",
+       "      <td>RER</td>\n",
+       "      <td>2.128880</td>\n",
+       "      <td>48.800330</td>\n",
+       "      <td>versailles</td>\n",
+       "      <td>8748796.0</td>\n",
+       "      <td>8367046.0</td>\n",
+       "      <td>8009738.0</td>\n",
+       "      <td>7520468.0</td>\n",
+       "      <td>7015859.0</td>\n",
+       "      <td>2886249</td>\n",
+       "      <td>3310046</td>\n",
+       "      <td>78000.0</td>\n",
+       "      <td>5795124.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>7932381.4</td>\n",
+       "      <td>611741.140672</td>\n",
+       "      <td>-0.636143</td>\n",
+       "      <td>-0.582717</td>\n",
+       "      <td>0.146833</td>\n",
+       "      <td>457</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>62.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Versailles Rive Droite</td>\n",
+       "      <td>RER</td>\n",
+       "      <td>2.135087</td>\n",
+       "      <td>48.809482</td>\n",
+       "      <td>versailles</td>\n",
+       "      <td>5357929.0</td>\n",
+       "      <td>5327810.0</td>\n",
+       "      <td>5562438.0</td>\n",
+       "      <td>5705373.0</td>\n",
+       "      <td>5855418.0</td>\n",
+       "      <td>2039014</td>\n",
+       "      <td>4698156</td>\n",
+       "      <td>78000.0</td>\n",
+       "      <td>5530365.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>5561793.6</td>\n",
+       "      <td>201563.810161</td>\n",
+       "      <td>-0.633389</td>\n",
+       "      <td>-0.155280</td>\n",
+       "      <td>1.304131</td>\n",
+       "      <td>458</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Montreuil (transilien)</td>\n",
+       "      <td>RER</td>\n",
+       "      <td>2.152993</td>\n",
+       "      <td>48.805941</td>\n",
+       "      <td>versailles</td>\n",
+       "      <td>2248554.0</td>\n",
+       "      <td>2137642.0</td>\n",
+       "      <td>2192249.0</td>\n",
+       "      <td>2204405.0</td>\n",
+       "      <td>2226698.0</td>\n",
+       "      <td>748793</td>\n",
+       "      <td>1897965</td>\n",
+       "      <td>78000.0</td>\n",
+       "      <td>2010237.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>2201909.6</td>\n",
+       "      <td>37470.103948</td>\n",
+       "      <td>-0.659935</td>\n",
+       "      <td>-0.138037</td>\n",
+       "      <td>1.534699</td>\n",
+       "      <td>423</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Porchefontaine</td>\n",
+       "      <td>RER</td>\n",
+       "      <td>2.152379</td>\n",
+       "      <td>48.796528</td>\n",
+       "      <td>versailles</td>\n",
+       "      <td>956155.0</td>\n",
+       "      <td>946641.0</td>\n",
+       "      <td>933001.0</td>\n",
+       "      <td>902371.0</td>\n",
+       "      <td>875987.0</td>\n",
+       "      <td>398498</td>\n",
+       "      <td>545751</td>\n",
+       "      <td>78000.0</td>\n",
+       "      <td>723565.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>922831.0</td>\n",
+       "      <td>29643.906328</td>\n",
+       "      <td>-0.568179</td>\n",
+       "      <td>-0.408612</td>\n",
+       "      <td>0.369520</td>\n",
+       "      <td>663</td>\n",
+       "      <td>264.0</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>279.0</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>241.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Station_name Network  Longitude   Latitude        City  \\\n",
+       "0            Versailles Chantiers     RER   2.135160  48.795690  versailles   \n",
+       "1  Versailles Château Rive Gauche     RER   2.128880  48.800330  versailles   \n",
+       "2          Versailles Rive Droite     RER   2.135087  48.809482  versailles   \n",
+       "3          Montreuil (transilien)     RER   2.152993  48.805941  versailles   \n",
+       "4                  Porchefontaine     RER   2.152379  48.796528  versailles   \n",
+       "\n",
+       "   Traffic_2015  Traffic_2016  Traffic_2017  Traffic_2018  Traffic_2019  \\\n",
+       "0    24191310.0    24132107.0    23974181.0    23336771.0    22909416.0   \n",
+       "1     8748796.0     8367046.0     8009738.0     7520468.0     7015859.0   \n",
+       "2     5357929.0     5327810.0     5562438.0     5705373.0     5855418.0   \n",
+       "3     2248554.0     2137642.0     2192249.0     2204405.0     2226698.0   \n",
+       "4      956155.0      946641.0      933001.0      902371.0      875987.0   \n",
+       "\n",
+       "   Traffic_2020  Traffic_2021  Postcode  Traffic_2022  dept  Traffic_pre_cov  \\\n",
+       "0      12376593      15922909   78000.0    18934500.0  78.0       23708757.0   \n",
+       "1       2886249       3310046   78000.0     5795124.0  78.0        7932381.4   \n",
+       "2       2039014       4698156   78000.0     5530365.0  78.0        5561793.6   \n",
+       "3        748793       1897965   78000.0     2010237.0  78.0        2201909.6   \n",
+       "4        398498        545751   78000.0      723565.0  78.0         922831.0   \n",
+       "\n",
+       "   Traffic_pre_cov_sd  covid_drop_2020  covid_drop_2021  Traffic_2020_2021  \\\n",
+       "0       501966.560353        -0.477974        -0.328395           0.286534   \n",
+       "1       611741.140672        -0.636143        -0.582717           0.146833   \n",
+       "2       201563.810161        -0.633389        -0.155280           1.304131   \n",
+       "3        37470.103948        -0.659935        -0.138037           1.534699   \n",
+       "4        29643.906328        -0.568179        -0.408612           0.369520   \n",
+       "\n",
+       "   Origin_id  Rank_rer_2015  Rank_rer_2016  Rank_rer_2017  Rank_rer_2018  \\\n",
+       "0        531            8.0            9.0            9.0           10.0   \n",
+       "1        457           41.0           49.0           55.0           59.0   \n",
+       "2        458           83.0           85.0           81.0           81.0   \n",
+       "3        423          183.0          198.0          196.0          196.0   \n",
+       "4        663          264.0          267.0          273.0          275.0   \n",
+       "\n",
+       "   Rank_rer_2019  Rank_rer_2020  Rank_rer_2021  Rank_rer_2022  \n",
+       "0           10.0            8.0           11.0            8.0  \n",
+       "1           64.0           71.0          103.0           62.0  \n",
+       "2           79.0          109.0           71.0           64.0  \n",
+       "3          194.0          231.0          178.0          156.0  \n",
+       "4          279.0          276.0          301.0          241.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "667d66e4",
    "metadata": {},
@@ -1714,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "9328c5c5",
    "metadata": {},
    "outputs": [
@@ -1753,97 +2039,97 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>679</td>\n",
-       "      <td>Porchefontaine</td>\n",
-       "      <td>AMETHYSTE</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>January</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>679</td>\n",
-       "      <td>Porchefontaine</td>\n",
-       "      <td>AUTRE TITRE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>January</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>679</td>\n",
-       "      <td>Porchefontaine</td>\n",
+       "      <th>103952</th>\n",
+       "      <td>2023-06-26</td>\n",
+       "      <td>884</td>\n",
+       "      <td>Versailles Rive Droite</td>\n",
        "      <td>FGT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>January</td>\n",
+       "      <td>114</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>June</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>679</td>\n",
-       "      <td>Porchefontaine</td>\n",
+       "      <th>103953</th>\n",
+       "      <td>2023-06-26</td>\n",
+       "      <td>884</td>\n",
+       "      <td>Versailles Rive Droite</td>\n",
        "      <td>IMAGINE R</td>\n",
-       "      <td>33</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>January</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>June</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>679</td>\n",
-       "      <td>Porchefontaine</td>\n",
+       "      <th>103954</th>\n",
+       "      <td>2023-06-26</td>\n",
+       "      <td>884</td>\n",
+       "      <td>Versailles Rive Droite</td>\n",
        "      <td>NAVIGO</td>\n",
-       "      <td>52</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>January</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>June</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103955</th>\n",
+       "      <td>2023-06-26</td>\n",
+       "      <td>884</td>\n",
+       "      <td>Versailles Rive Droite</td>\n",
+       "      <td>NAVIGO JOUR</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>June</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103956</th>\n",
+       "      <td>2023-06-26</td>\n",
+       "      <td>884</td>\n",
+       "      <td>Versailles Rive Droite</td>\n",
+       "      <td>NON DEFINI</td>\n",
+       "      <td>207</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>June</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date station_id    station_name    pass_type  n_passengers  year  day  \\\n",
-       "0 2015-01-01        679  Porchefontaine    AMETHYSTE             7  2015    1   \n",
-       "1 2015-01-01        679  Porchefontaine  AUTRE TITRE             0  2015    1   \n",
-       "2 2015-01-01        679  Porchefontaine          FGT             0  2015    1   \n",
-       "3 2015-01-01        679  Porchefontaine    IMAGINE R            33  2015    1   \n",
-       "4 2015-01-01        679  Porchefontaine       NAVIGO            52  2015    1   \n",
+       "             date station_id            station_name    pass_type  \\\n",
+       "103952 2023-06-26        884  Versailles Rive Droite          FGT   \n",
+       "103953 2023-06-26        884  Versailles Rive Droite    IMAGINE R   \n",
+       "103954 2023-06-26        884  Versailles Rive Droite       NAVIGO   \n",
+       "103955 2023-06-26        884  Versailles Rive Droite  NAVIGO JOUR   \n",
+       "103956 2023-06-26        884  Versailles Rive Droite   NON DEFINI   \n",
        "\n",
-       "   month  day_name month_name  \n",
-       "0      1  Thursday    January  \n",
-       "1      1  Thursday    January  \n",
-       "2      1  Thursday    January  \n",
-       "3      1  Thursday    January  \n",
-       "4      1  Thursday    January  "
+       "        n_passengers  year  day  month day_name month_name  \n",
+       "103952           114  2023   26      6   Monday       June  \n",
+       "103953          1247  2023   26      6   Monday       June  \n",
+       "103954          3433  2023   26      6   Monday       June  \n",
+       "103955            26  2023   26      6   Monday       June  \n",
+       "103956           207  2023   26      6   Monday       June  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "daily.head()"
+    "daily.tail()"
    ]
   },
   {
